fix width of texts and arrow on mobile view

--- a/css/main.scss
+++ b/css/main.scss
@@ -2037,10 +2037,6 @@ grid-template-columns: 1fr;
 			br {
 				display: none;
 			}
-
-			.more {
-				display: none;
-			}
 		}
 	}
 
